==> PGwind/STM32code/10-1 软件I2C读写MPU6050/Hardware/MyI2C.c <==
#include "stm32f10x.h"                  // Device header
#include "Delay.h"

#define SCL_PORT    GPIOB
#define SCL_PIN     GPIO_Pin_10

void MyI2C_W_SCL(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, GPIO_Pin_10, (BitAction)BitValue);
	Delay_us(10);
}

void MyI2C_W_SDA(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, GPIO_Pin_11, (BitAction)BitValue);
	Delay_us(10);
}

uint8_t MyI2C_R_SDA(void)
{
	uint8_t BitValue;
	BitValue = GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_11);
	Delay_us(10);
	return BitValue;
}



void MyI2C_Init(void)
{
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
		
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD; //开漏输出
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10 | GPIO_Pin_11;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	
	GPIO_SetBits(GPIOB, GPIO_Pin_10  | GPIO_Pin_11);
}

void MyI2C_Start(void) // 开始
{
	MyI2C_W_SDA(1); // 释放SDA
	MyI2C_W_SCL(1); // 释放SCL	
	MyI2C_W_SDA(0); // 先拉低SDA
	MyI2C_W_SCL(0); // 后拉低SCL
}

void MyI2C_Stop(void) // 结束
{
	MyI2C_W_SDA(0); // 先拉低SDA
	MyI2C_W_SCL(1); // 后释放SCL
	MyI2C_W_SDA(1); // 再释放SDA
}

void MyI2C_SendByte(uint8_t Byte) // 发送
{
	uint8_t i;
	for (i = 0; i < 8; i ++)
	{
		MyI2C_W_SDA(Byte & (0x80 >> i)); // 相与得Byte最高位
		MyI2C_W_SCL(1); // 释放SCL
		MyI2C_W_SCL(0); // 拉低SCL
	}
} 

uint8_t MyI2C_ReceiveByte(void)
{
	uint8_t i, Byte = 0x00;
	MyI2C_W_SDA(1);
	for (i = 0; i < 8; i ++)
	{
		MyI2C_W_SCL(1); // 主机释放SCL，读取数据
		if (MyI2C_R_SDA() == 1) 
		{
			Byte |= (0x80 >> i); // Byte最高位置1
		}		
		MyI2C_W_SCL(0);
	}
	return Byte;
}

void MyI2C_SendAck(uint8_t AckBit) // 发送应答位
{
		MyI2C_W_SDA(AckBit);
		MyI2C_W_SCL(1); // 从机读取应答
		MyI2C_W_SCL(0); // 进入下一个时序单元
} 

uint8_t MyI2C_ReceiveAck(void) // 读取应答位
{
	uint8_t AckBit;
	MyI2C_W_SDA(1); // 主机释放
	MyI2C_W_SCL(1); // 读取应答位
	AckBit = MyI2C_R_SDA();
	MyI2C_W_SCL(0); // 进入下一个时序单元
	return AckBit;
}
